[metadata]
name = qutip-qtrl
url = https://github.com/qutip/qutip-qtrl
description = The QuTiP quantum optimal control package
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
keywords = quantum, physics, dynamics, optimal, control
license = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
author = Alexander Pitchford, Paul D. Nation, Robert J. Johansson, Chris Granade, Arne Grimsmo, Nathan Shammah, Shahnawaz Ahmed, Neill Lambert, Eric Giguere, Boxi Li, Jake Lishman, Simon Cross, Asier Galicia
author_email = qutip-admin@googlegroups.com
platforms = Linux, Mac OSX, Unix, Windows

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    numpy>=1.19
    scipy>=1.0
    qutip>=5.0.1
    packaging
setup_requires =
    packaging

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest>=5.2
full =
    %(tests)s
